--- a/app/src/main/res/layout/fragment_update_plan.xml
+++ b/app/src/main/res/layout/fragment_update_plan.xml
@@ -65,7 +65,7 @@
             android:layout_marginEnd="88dp"
             android:ems="10"
             android:hint="Input Here"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:padding="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/calory_intake" />
@@ -123,7 +123,7 @@
             android:layout_marginEnd="88dp"
             android:ems="10"
             android:hint="Input Here"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:padding="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fat_intake" />
@@ -158,7 +158,7 @@
             android:layout_marginEnd="88dp"
             android:ems="10"
             android:hint="Input Here"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:padding="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/carb_intake" />
@@ -193,7 +193,7 @@
             android:layout_marginEnd="88dp"
             android:ems="10"
             android:hint="Input Here"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             android:padding="15dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/protein_intake" />
